# Faststrap

./: CHANGELOG.md  README.md  RELEASE_0_5_9_PLAN.md  ROADMAP.md  mkdocs.yml  pyproject.toml
docs/: PWA_GUIDE.md  STATIC_FILES.md  index.md
docs/api/: core.md  presets.md
docs/components/display/: chart.md  data-table.md  map-view.md  markdown.md  sse-target.md  stat_card.md  table.md
docs/components/feedback/: modal.md  notification-center.md  toast.md
docs/components/forms/: date-range-picker.md  export-button.md  filter-bar.md  form-builder.md  formgroup.md  multi-select.md  range-slider.md  searchable-select.md
docs/components/layout/: dashboard-grid.md
docs/components/navigation/: drawer.md
docs/deployment/: flyio.md  overview.md  railway.md  render.md  split-architecture.md  vercel.md  vps.md
docs/presets/: index.md  location-action.md  optimistic-action.md  responses.md  sse-stream.md
examples/05_new_components/: README.md  v059_showcase.py  v060_theme_adapted.py
showcase/: furniture_store_showcase.py  hotel_booking_showcase.py
skills/faststrap-app-builder/: SKILL.md
skills/faststrap-app-builder/references/: nis-patterns.md  project-agents-template.md  reference-apps.md
src/faststrap/: __init__.py  cli.py
src/faststrap/components/: __init__.py
src/faststrap/components/display/: __init__.py  card.py  chart.py  data_table.py  map_view.py  markdown.py  sheet.py  stat_card.py  table.py
src/faststrap/components/feedback/: __init__.py  alert.py  modal.py  notification_center.py  toast.py
src/faststrap/components/forms/: __init__.py  button.py  date_range_picker.py  errors.py  export_button.py  filter_bar.py  form.py  input.py  multi_select.py  range_slider.py  searchable_select.py
src/faststrap/components/layout/: dashboard_grid.py
src/faststrap/components/navigation/: drawer.py  navbar.py
src/faststrap/core/: _ids.py  assets.py  base.py  registry.py  theme.py  types.py
src/faststrap/layouts/: auth.py
src/faststrap/presets/: __init__.py  interactions.py  responses.py
src/faststrap/pwa/: core.py
src/faststrap/seo/: meta.py
src/faststrap/utils/: attrs.py  static_management.py
tests/: test_attrs.py  test_cli.py  test_mount_assets.py  test_presets.py  test_pwa.py  test_seo_meta.py
tests/test_components/: test_bottom_nav.py  test_button.py  test_data_table.py  test_date_range_picker.py  test_drawer.py  test_export_button.py  test_form_builder.py  test_form_errors.py  test_input.py  test_map_view.py  test_markdown.py  test_modal.py  test_multi_select.py  test_navbar.py  test_notification_center.py  test_range_slider.py  test_searchable_select.py  test_sheet.py  test_table.py  test_table_from_df.py  test_toast.py
tests/test_core/: test_assets_cdn.py  test_theme.py
